# light

./: CMakeLists.txt  LICENSE.txt  README.md  exr.cpp  jobs.hpp  light.cpp  light.hpp  trace.cpp  trace.hpp  vector.hpp  xoshiro.hpp
examples/html/: cornell.html
images/ground_truth_1Mspp/: image.png.command_line_options
luxblend_reference/: scene.blend
mitsuba2_reference/: scene.xml
src/: ArrayStack.hpp  exr.cpp  exr.hpp  jobs.hpp  light.cpp  light.hpp  sdf.hpp  trace.cpp  trace.hpp  vector.hpp  xoshiro.hpp
src/exr/: convert.hpp  exr.cpp  exr.hpp  logging.hpp
